--- a/Frontend/src/styles/Calender.css
+++ b/Frontend/src/styles/Calender.css
@@ -165,3 +165,13 @@
   .react-calendar--selectRange .react-calendar__tile--hover {
     background-color: #e6e6e6;
   }
+
+
+
+
+  /* // */
+
+  .react-calendar__tile--active {
+    background-color: #4f46e5 !important;
+    color: white;
+  }
